# WinOpenCV

./: CMakeLists.txt  README.md  main.cpp
